deploy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gio-cv
  labels:
    app.kubernetes.io/instance: gio-cv
    app: gio-cv
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gio-cv
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: gio-cv
        app: gio-cv
    spec:
      containers:
        - name: gio-cv
          image: pacgi/cv:13b778d
          imagePullPolicy: Always
          readinessProbe:
            initialDelaySeconds: 3
            periodSeconds: 3
            httpGet:
              path: /index.html
              port: gio-cv-entry
          livenessProbe:
            initialDelaySeconds: 3
            periodSeconds: 15
            httpGet:
              path: /index.html
              port: gio-cv-entry
          ports:
            - containerPort: 80
              name: gio-cv-entry
