deploy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gio-cv
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - cv.pacgi.dev
      secretName: pacgi-dev

  rules:
    - host: cv.pacgi.dev
      http:
        paths:
          - path: /giolovestiggy
            pathType: Prefix
            backend:
              service:
                name: gio-newcv
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: gio-cv
                port:
                  number: 80
